fixed buttons visibility on menù

--- a/webapp/src/app/components/mobile-sidenav/mobile-sidenav.component.sass
+++ b/webapp/src/app/components/mobile-sidenav/mobile-sidenav.component.sass
@@ -5,6 +5,7 @@
     position: fixed
     background-color: #3f51b5
     padding: 10px
+    z-index: 5
 
 .menu-tab
     display: block
